--- a/pom.xml
+++ b/pom.xml
@@ -103,11 +103,37 @@
             <artifactId>hutool-all</artifactId>
             <version>5.1.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+
+        <!-- MyBatis plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-core</artifactId>
-            <version>3.3.1</version>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.4.3.4</version>
+        </dependency>
+
+        <!--<dependency>
+            <groupId>com.cjkj</groupId>
+            <artifactId>cjkj-common-spring-boot-starter</artifactId>
+            <version>1.5.0</version>
+        </dependency>-->
+
         <!--<dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
@@ -148,11 +174,20 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
         </plugins>
 
         <resources>
             <resource>
-                <directory>src/main/resources/</directory>
+                <directory>src/main/java</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>**/*.conf</include>
@@ -163,6 +198,7 @@
                 </includes>
             </resource>
         </resources>
+
 
     </build>
 
