--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <version>3.4.3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
         <!--<dependency>
             <groupId>com.cjkj</groupId>
             <artifactId>cjkj-common-spring-boot-starter</artifactId>
