--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -101,7 +103,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.1.4</version>
+            <version>4.3.1</version>
         </dependency>
 
         <dependency>
@@ -128,11 +130,28 @@
             <version>3.4.3.4</version>
         </dependency>
 
+        <!--数据源-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
+        <!--logback-->
+        <dependency>
+             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.0-beta2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-imaging</artifactId>
+            <version>1.0-alpha2</version> <!-- 请检查是否有更新的版本 -->
+        </dependency>
         <!--<dependency>
             <groupId>com.cjkj</groupId>
             <artifactId>cjkj-common-spring-boot-starter</artifactId>
@@ -204,7 +223,6 @@
                 </includes>
             </resource>
         </resources>
-
 
     </build>
 
